style.css
@import url("https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@1,200;1,600&family=Lora:ital,wght@0,500;0,600;1,500;1,600&family=Montserrat:wght@300;700&family=Poppins:ital,wght@0,400;0,500;1,600&family=Roboto+Slab:wght@500&family=Roboto:wght@300;400;500;700;900&display=swap");

@font-face {
  font-family: aquire;
  src: url(aquire-font/Aquire-BW0ox.otf);
}
@font-face {
  font-family: mono;
  src: url(Monoton1/Monoton-Regular.ttf);
}
/* on-scroll animation */
.hidden {
  opacity: 0;
  filter: blur(4px);
  transform: translateX(-50%);
  transition: all 1.2s;
}
.show {
  opacity: 1;
  filter: blur(0);
  transform: translateX(0);
}
/* on-scroll animation */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
  list-style: none;
  font-family: "Roboto", sans-serif;
  text-transform: capitalize;
  transition: 0.2s ease;
  cursor: url(images/3d-pointer-28.png), default;
}
* h1 {
  /* text-shadow: 0 2px 0 #01e1ff, 0 3px 0 #026673, 0 4px 0 #026370,
    0 5px 0 #01606c, 0 6px 0 #01606d; */
  letter-spacing: 3px;
  text-transform: uppercase;
  color: transparent;
  -webkit-text-stroke-width: 0.8px;
  -webkit-text-stroke-color: #01e1ff;
  position: relative;
}
* h1::before,
*h1::after {
  content: attr(data-text);
  position: absolute;
  top: 0;
  left: 0;
  transition: 0.4s ease-in-out;
}
* h1:hover::before {
  color: red;
  transform: translate(12px, -12px);
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: white;
}
* h1:hover::after {
  color: red;
  transform: translate(12px, -12px);
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: white;
}
/* * h1 {
  text-shadow: 0 -1px 0 #01e1ff,
  0 2px 0 #01e1ff,
  0 4px 0 #01e1ff,
   -2px -2px 15px #0f98a7,
   2px -2px 15px #0f98a7,
   -2px 2px 15px #0f98a7,
   2px 2px 15px #0f98a7;
} */
title {
  font-family: aquire;
}
::-webkit-scrollbar {
  width: 14px;
}
::-webkit-scrollbar-track {
  background: #1b1729;
}
::-webkit-scrollbar-thumb {
  background: #3ca8e7;
  border-radius: 3px;
}
html {
  scroll-behavior: smooth;
}
/* nav sec */
header {
  background-color: rgba(0, 0, 0, 0.3);
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 10000;
  transition: all 0.5s ease;
}
.navbar {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 5px 10px;
}
.nav-menu {
  float: right;
  display: flex;
  flex-direction: row;
  /*justify-content: space-between;
    align-items: center; */
  gap: 40px;
  padding: 14px 0;
  margin: 0;
}
.logo {
  display: inline;
  flex-direction: row;
  text-align: center;
}
.logo .nav-branding {
  font-family: aquire;
  display: inline-block;
  font-size: 1.6rem;
  /* padding: 4px; */
  font-weight: bold;
  background: linear-gradient(to right, rgb(78, 78, 244), rgb(72, 231, 245));
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  display: none;
}
.nav-link {
  font-family: aquire;
  padding: 20px 10px;
  transition: 0.2s ease;
  font-size: 1.1rem;
  font-weight: bold;
  color: #ffffff;
  position: relative;
}
.nav-link:hover {
  /* color: black; */
  border-radius: 5px;
}
.nav-item i {
  color: #fff;
}
.nav-link::before {
  content: "";
  position: absolute;
  left: 0;
  top: 45px;
  width: 100%;
  height: 4px;
  background: rgb(25, 198, 198);
  z-index: -1;
  transition: transform 0.5s;
  transform-origin: 0 0;
  transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
}
.nav-link::before {
  transform: scaleX(0);
}
.nav-link:hover::before {
  transform: scaleX(1);
}
.nav-item:hover .nav-link {
  color: #01e1ff;
}
.checkbtn {
  color: aqua;
  font-size: 50px;
  float: right;
  /* line-height: 50px; */
  /* margin-top: 10px; */
  margin-right: 30px;
  cursor: pointer;
  display: none;
}
#check {
  display: none;
}
.bar {
  display: block;
  width: 30px;
  height: 3px;
  margin: 5px;
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.4s ease-in-out;
  background-color: #3cd3e7;
}

@media (max-width: 990px) {
  .logo .nav-branding {
    display: block;
  }
  .checkbtn {
    display: block;
    margin: 8px 0;
    align-items: flex-end;
  }
  .checkbtn.active .bar:nth-child(2) {
    opacity: 0;
  }
  .checkbtn.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }
  .checkbtn.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
  #check:checked ~ .nav-menu {
    left: 0;
  }

  .nav-branding {
    font-size: 1.8rem;
    margin: 12px;
  }
  .navbar {
    min-height: 28px;
    padding: 12px 6px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  .nav-menu {
    position: fixed;
    left: -100%;
    top: 54px;
    gap: 0;
    flex-direction: column;
    background-color: #181524;
    width: 100vw;
    text-align: center;
    transition: 0.3s;
  }
  #check:checked ~ .nav-menu {
    left: 0;
  }
  .nav-item {
    margin: 14px 0;
  }
  .nav-menu:checked .nav-link:active {
    left: -100%;
  }
  .nav-link:active ~ .nav-menu {
    left: 0;
  }
}
/* close nav sec */

/* home sec */
.home {
  height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background: rgb(0, 0, 0);
  /* -webkit-animation: color-change-3x 4s linear infinite alternate both;
  animation: color-change-3x 4s linear infinite alternate both; */
}
.home .greet {
  font-weight: bold;
  color: white;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-direction: column;
}
.home .greet h1 {
  font-family: aquire;
  padding: 8px 18px;
  background-clip: text;
  padding-bottom: 25px;
  font-size: 60px;
  font-weight: bold;
}
.home .greet h3 {
  font-family: aquire;
  padding: 5px 18px;
  /* background: linear-gradient(to right, rgb(1, 179, 210), rgb(0, 99, 247));
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent; */
  color: white;
  letter-spacing: 2px;
  padding-bottom: 12px;
  font-size: 27px;
  font-weight: bold;
}
/* ... */

